--- a/index.html
+++ b/index.html
@@ -1,45 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Thaumatorium</title>
-    <meta name="description" content="Where the Magic happens">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-
-<body>
-    <div id="ie-usage-warning">
-        <p>You are using an <strong>outdated</strong> browser. Please upgrade your browser to <a
-                href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a>.</p>
-        <p><a href="https://www.dignited.com/34380/9-reasons-you-should-use-firefox-instead-of-chrome/">Here</a> are
-            some reasons to choose Fx over Chrome.</p>
-        <p>If you do not have admin rights to install normal Firefox, try <a
-                href="https://portableapps.com/apps/internet/firefox_portable">Firefox Portable</a> instead.</p>
-    </div>
-
-    <header>
-        <h1>Thaumatorium</h1>
-        <p class="tagline">Where the magic happens</p>
-    </header>
-
-    <p>Welcome!</p>
-
-    <script type="text/javascript">
-        /* original source taken from https://stackoverflow.com/a/22551342/1102369 */
-        (function msieversion() {
-            var ua = window.navigator.userAgent;
-            var isIE = /MSIE|Trident/.test(ua);
-            var el = document.getElementById("ie-usage-warning");
-
-            if (isIE) {
-                el.setAttribute('style', 'display : initial;');
-            } else {
-                el.setAttribute('style', 'display : none;');
-            }
-        })();
-    </script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en-US"><head> <meta charset="utf-8"/> <meta content="IE=edge" http-equiv="X-UA-Compatible"/> <title>Thaumatorium</title> <meta content="Where the Magic happens" name="description"/> <meta content="width=device-width, initial-scale=1" name="viewport"/> <link href="/manifest.json" rel="manifest"> <meta content="#800" name="theme-color"> <link href="images/icons-192.png" rel="apple-touch-icon"> <script src="elm.min.js" type="text/javascript"></script></head><body><div id="elm-root"></div><script>Elm.Main.init({node: document.getElementById("elm-root")});</script></body></html>
