lazy load an image
forgot to add the 'loading=lazy'

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <header id=banner>
     <a href="/">
-      <img src="/images/Thaumatorium.svg" alt="main logo consisting of a checkerboard pattern" height="111"
+      <img loading=lazy src="/images/Thaumatorium.svg" alt="main logo consisting of a checkerboard pattern" height="111"
         width="111" />
     </a>
     <h1>The Thaumatorium</h1>
