change jpg to webp

--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
       one.<br>
       Or just click the image below<br>
       Or search the internet for "Praetorian Pi"</p>
-    <a href="https://www.youtube.com/watch?v=pXPXMxsXT28"><img src="/images/clever.jpg"
-        alt="The bad guy from the 'The Net' saying 'clever girl'" /></a>
+    <a href="https://www.youtube.com/watch?v=pXPXMxsXT28"><img src="/images/clever.webp"
+      loading=lazy alt="The bad guy from the 'The Net' saying 'clever girl'" /></a>
   </main>
 
   <footer>
