--- a/projects/starfield.html
+++ b/projects/starfield.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width" />
 	<title>StarField</title>
 	<style>
 		* {
@@ -22,56 +22,80 @@
 			width: 100%;
 		}
 
+		#pause {
+			background: #fff;
+			color: red;
+			float: left;
+		}
+
 	</style>
 </head>
 
 <body>
-	<canvas></canvas>
-	<script type=module>
-				const Star = function(x, y, z) {
-						return { x:x,
-								y:y,
-								z:z,
-								size:25
-						}
-				};
-				let context = document.querySelector("canvas").getContext("2d");
-				let height = document.documentElement.clientHeight;
-				let width = document.documentElement.clientWidth;
-				let stars = new Array();
-				let max_depth = 7500;
-				for (let index = 0; index < 200; index++)
-						stars[index] = new Star(Math.random() * width, Math.random() * height, index * (max_depth / 200));
-						
-				const loop = () => {
-						window.requestAnimationFrame(loop);
-						height = document.documentElement.clientHeight;
-						width = document.documentElement.clientWidth;
-						context.canvas.height = height;
-						context.canvas.width = width;
-						context.fillStyle = "#000000";
-						context.fillRect(0, 0, width, height);
-						for (let index = stars.length - 1; index > -1; index--) {
-								let star = stars[index];
-								star.z -= 5;
-								if (star.z < 0) {
-										stars.push(stars.splice(index, 1)[0]);
-										star.z = max_depth;
-										continue;
-								}
-								let translate_x = width * 0.5;
-								let translate_y = height * 0.5;
-								let field_of_view = (height + width) * 0.5;
-								let star_x = (star.x - translate_x) / (star.z / field_of_view) + translate_x;
-								let star_y = (star.y - translate_y) / (star.z / field_of_view) + translate_y;
-								let scale = field_of_view / (field_of_view + star.z);
-								let color = Math.floor(scale * 256);
-								context.fillStyle = "rgb(" + color + "," + color + "," + color + ")";
-								context.fillRect(star_x, star_y, star.size * scale, star.size * scale);
-						}
+	<canvas id=starfield></canvas>
+
+	<script type="module">
+		const context = window.starfield.getContext("2d");
+		let height = document.documentElement.clientHeight;
+		let width = document.documentElement.clientWidth;
+		const depth = 1000 * (height / width);
+		const stars = [];
+		const max_depth = width;
+
+		// Create stars
+		for (let i = 0; i < 200; i++) {
+			let size = Math.random() * 4;
+			stars[i] = {
+				x: Math.random() * width,
+				y: Math.random() * height,
+				z: Math.random() * depth,
+				size: size,
+				color: Math.floor(size * 256)
+			};
+		}
+
+		console.log(stars);
+
+		// Animation loop
+		const step = (timestamp) => {
+			// Not sure what to do with `timestamp`
+			height = document.documentElement.clientHeight;
+			width = document.documentElement.clientWidth;
+
+			// Resize canvas when the window is resized
+			context.canvas.height = height;
+			context.canvas.width = width;
+
+			// create the black background
+			context.fillRect(0, 0, width, height);
+
+			for (let i = stars.length - 1; i > -1; i--) {
+				let star = stars[i];
+
+				// move the star closer
+				star.x -= 1;
+
+				// move the star back once it reaches the screen
+				if (star.x < 0) {
+					stars.push(stars.splice(i, 1)[0]);
+					star.x = max_depth;
+					continue;
 				}
-				loop();
-		</script>
+
+				const scale = 2;
+				// context.fillStyle = "rgb(" + color + "," + color + "," + color + ")";
+				// context.fillRect(star.x, star.y, star.size * scale, star.size * scale);
+				context.beginPath();
+				context.fillStyle = "rgb(" + star.color + "," + star.color + "," + star.color + ")";
+				context.arc(star.x, star.y, star.size * scale, 0, 2 * Math.PI);
+				context.fill();
+			}
+
+			window.requestAnimationFrame(step);
+		};
+
+		window.requestAnimationFrame(step);
+	</script>
 </body>
 
 </html>
