--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 			<img loading=lazy src="/images/Thaumatorium.svg" alt="main logo consisting of a checkerboard pattern" height="111"
 				width="111" />
 		</a>
-		<h1>The Thaumatorium</h1>
-		<h2>Where the magic happens</h2>
-		<p>Last updated: <time>2020-05-02</time></p>
+		<div class=title>The Thaumatorium:</div>
+		<div class=subtitle>Where the magic happens</div>
+		<p><sub>Last updated: <time>2020-05-09</time></sub></p>
+		<p><sup>Previous update: <time>2020-05-02</time></sup></p>
 	</header>
 
 	<nav>
