clean up about.html

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,13 +1,17 @@
 <section>
   <h1>About</h1>
-  <h2>Thaumatorium</h2>
-  <p>Based on the word <i>thaumaturge</i>, meaning <i>miracle worker</i></p>
-  <h2>The author</h2>
-  <p>I'm someone who's sick of the state of the web and you know what they say: </p>
-  <blockquote>Improve the world, start with yourself - <a href="https://nl.wikipedia.org/wiki/Bond_zonder_Naam">Bond
-      Zonder Naam</a></blockquote>
-  <p>This is why I started with the basics: HTML, CSS and JS. Anything else is deemed <i>bloat</i></p>
-  <section class="about">
+  <section>
+    <h1>Thaumatorium</h1>
+    <p>Based on the word <i>thaumaturge</i>, meaning <i>miracle worker</i></p>
+  </section>
+  <section>
+    <h1>The author</h1>
+    <p>I'm someone who's sick of the state of the web and you know what they say: </p>
+    <blockquote>Improve the world, start with yourself - <a href="https://nl.wikipedia.org/wiki/Bond_zonder_Naam">Bond
+        Zonder Naam</a></blockquote>
+    <p>This is why I started with the basics: HTML, CSS and JS. Anything else is deemed <i>bloat</i></p>
+  </section>
+  <section>
     <h1>About Thaumatorium</h1>
     We are:
     <ul>
