add starfield image to projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -18,5 +18,9 @@
     <p>Over the years I created different versions (a 2D and even a 3D OpenGL variant!)</p>
     <p>Now that I know some HTML/CSS/JS, I decided to recreate this project for the web with plain HTML/CSS/JS! No crazy libraries needed!</p>
     <p>I still want to add brightness and color to the whole shebang!</p>
+    <figure>
+      <a href=/images/starfield.webp><img src=/images/starfield-thumb.webp alt="A generated starfield - the stars are shown moving from right to left. They are represented by circles of different sizes, but not brightness and color (yet)."></a>
+      <figcaption>A generated starfield</figcaption>
+    </figure>
   </section>
 </section>
