--- a/pages/frontpage.html
+++ b/pages/frontpage.html
@@ -1,23 +1,23 @@
 <section>
   <h1>Welcome to the Thaumatorium!</h1>
-  <p>Beepity boop, shoop da whoop!</p>
-  <p><strong>Note:</strong> You can check out the source of this page to see how HTML/CSS is <em>supposed</em> to be
-    used.<br>
-    As an example on how <em>not</em> to do HTML, take a look at Twitter with their
+  <p>
+    <strong>Note:</strong> This website is pure uncompressed HTML/CSS/JS, with some PNG and WEBP images to fluff shit
+    up. I like to think that this is how the web is <em>supposed</em> to be.</p>
+  <p>
+    An example on <em>how not to do HTML</em>, take a look at Twitter with their
     <code>&lt;div&gt;&lt;div&gt;&lt;div&gt;divs&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;</code>
-    nonsense.
+    nonsense. Silly Twitter! That's not how HTML should look!
   </p>
-  <p><strong>Disclaimer:</strong> I'm not perfect, so this file <em>will likely</em> contain mistakes. If you find
+  <p>
+    <strong>Disclaimer:</strong> I'm not perfect, so this file <em>will likely</em> contain mistakes. If you find
     any, please open a <a href="https://github.com/Thaumatorium/thaumatorium.github.io/issues">Github Issue</a>,
     whether it's just a spelling mistake or something wrong with the HTML.
   </p>
   <p>
-    We are based in the Netherlands. We like to take an unnormal take on
-    things: Take a look at what the masses are doing, learning from them
-    by NOT doing that and finding out where the good shit is at!
+    This site's author based in the Netherlands. I like to take an unnormal take on things: Look at what the masses are
+    doing, learning from them by NOT doing that and finding out where the good shit is at!
   </p>
   <p>
-    That doesn't mean that popular = bad. We just hate JavaScript and its
-    ecology. Damn JavaScript.
+    That doesn't necessarily mean that popular = bad. I mean C# is relatively popular yet is damn good! I (still) just hate JavaScript and its ecology. Feckin' JavaScript.
   </p>
 </section>
