--- a/pages/praetorianpi.html
+++ b/pages/praetorianpi.html
@@ -5,6 +5,6 @@
     one.<br>
     Or just click the image below<br>
     Or search the internet for "Praetorian Pi"</p> -->
-  <a href="https://www.youtube.com/watch?v=pXPXMxsXT28"><img src="/images/clever.webp" loading=lazy
-      alt="The bad guy from the 'The Net' saying 'clever girl'" /></a>
+  <a href="https://www.youtube.com/watch?v=pXPXMxsXT28">
+    <img loading=lazy width=540 height=960 src="/images/clever.webp" alt="The bad guy from the 'The Net' saying 'clever girl'" /></a>
 </section>
