--- a/pages/todo.html
+++ b/pages/todo.html
@@ -6,10 +6,11 @@
     <li><del>Make it able to switch main article</del></li>
     <li><del>Make thaumatorium.com functional</del></li>
     <li>I broke the browser history (clicking back doesn't "refresh" the page) 😭</li>
-    <li>Make articles look a bit better</li>
-    <li>Turn the main tags into articles and stick them all into a &lt;main&gt;, perhaps that gets the layout
-      working</li>
-    <li>Center the main content</li>
+    <li>Add brightness and color to the <code>starfield</code></li>
+    <li><del>Make articles look a bit better</del></li>
+    <li><del>Turn the main tags into articles and stick them all into a &lt;main&gt;, perhaps that gets the layout
+      working</del></li>
+    <li><del>Center the main content</del></li>
     <li>Create Mocking Spongebob generator</li>
     <li>Create ROT13 generator</li>
     <li>Make thaumatorium.com look good</li>
