--- a/pages/articles.html
+++ b/pages/articles.html
@@ -1,4 +1,4 @@
 <section>
-  <h1><a onclick=goto(this.hash) href=#Example>An example article</a></h1>
-  <h1><a onclick=goto(this.hash) href=#Blog>Another blog</a></h1>
+  <h1><a onclick=goto(this.hash) href=#example>An example article</a></h1>
+  <h1><a onclick=goto(this.hash) href=#blog>Another blog</a></h1>
 </section>
