add ROT13 and MSTG projects

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 				"#blog": { path: "/articles/blog.html", js: false },
 				// projects
 				"#starfield": { path: "/projects/starfield.html", js: true },
-				"#mstg": { path: "/projects/mockingspongebob.html", js: false },
-				"#rot13": { path: "/projects/rot13.html", js: false },
+				"#mstg": { path: "/projects/mstg.html", js: true },
+				"#rot13": { path: "/projects/rot13.html", js: true },
 			}
 			let data = hashToPageMap[hash];
 			fetch(data.path).then(response => {
