--- a/pages/projects.html
+++ b/pages/projects.html
@@ -17,14 +17,15 @@
     <p>If you want to see what this site used to look like, check out <a
         href=https://web.archive.org/https://thaumatorium.com />archive.org</a>.</p>
   </section>
+
   <section>
     <h1>Semantic Override Network (SON)</h1>
     <p>A news aggregator that will pierce the heavens!</p>
     <p>For real though: I'm still busy forming ideas around this project</p>
     <p>Every damn time I think "I got this", I usually lose it within a day or two, even after writing things down.</p>
   </section>
+
   <section>
-    <h1><a href="projects/starfield.html">Starfield</a></h1>
     <h1><a onclick=goto(this.hash) href=#starfield>Starfield</a></h1>
     <p>It's the first type of project I've ever made! Well, other than "<code>hello world.c</code>"</p>
     <p>The first one I ever made was in cmd.exe, with some janky-ass <code>c</code> moving <code>*</code> and
@@ -42,8 +43,12 @@
       <figcaption>A generated starfield</figcaption>
     </figure>
   </section>
+
   <section>
     <h1><a onclick=goto(this.hash) href=#mstg>Mocking Spongebob Text Generator (MSTG)</a></h1>
+  </section>
 
+  <section>
+    <h1><a onclick=goto(this.hash) href=#rot13>ROT13</a></h1>
   </section>
 </section>
