--- a/projects/rot13.html
+++ b/projects/rot13.html
@@ -1,3 +1,9 @@
 <section>
-  
+  <link rel=stylesheet href=/projects/rot13.css>
+  <h1>ROT13</h1>
+  <p>input:</p>
+  <textarea id=in></textarea>
+  <p>output - click to copy to clipboard:</p>
+  <textarea id=out readonly></textarea>
+  <script type=module src=/projects/rot13.mjs></script>
 </section>
