add mockbob to projects.html; tweak the header

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
 
 <body>
 	<header id=banner>
-		<a href="/">
-			<img loading=lazy height=111 width=111 src="/images/Thaumatorium.svg"
-				alt="main logo consisting of a checkerboard pattern" />
-		</a>
-		<div class=title>The Thaumatorium:</div>
+		<div id=logo>
+			<a href="/">
+				<img loading=lazy height=111 width=111 src="/images/Thaumatorium.svg"
+					alt="main logo consisting of a checkerboard pattern" />
+			</a>
+		</div>
+		<h1 class=title>The Thaumatorium:</h1>
 		<div class=subtitle>Where the magic happens</div>
 		<p><sub>Last updated: <time>2020-05-09</time></sub></p>
 		<p><sup>Previous update: <time>2020-05-02</time></sup></p>
