--- a/pages/projects.html
+++ b/pages/projects.html
@@ -46,9 +46,16 @@
 
   <section>
     <h1><a onclick=goto(this.hash) href=#mstg>Mocking Spongebob Text Generator (MSTG)</a></h1>
+    <p>I created my own because others had randomized uppercase/lowercase and I wanted the odd letters to be uppercase and the even letters to be lowercase.</p>
+    <figure>
+      <img loading=lazy width=201 height=115 src=/images/mockbob.png
+        alt="A generated starfield - the stars are shown moving from right to left. They are represented by circles of different sizes, but not brightness and color (yet).">
+      <figcaption>Mocking Spongebob</figcaption>
+    </figure>
   </section>
 
   <section>
     <h1><a onclick=goto(this.hash) href=#rot13>ROT13</a></h1>
+    <p>I <em>could</em> go to <a href=https://ROT13.com>ROT13.com</a>, but why?</p>
   </section>
 </section>
