fix banner layout on very slim screens
Now the banner doesn't take up a ton of space, without making use of float! :D

--- a/index.html
+++ b/index.html
@@ -31,17 +31,19 @@
 </head>
 
 <body>
-	<header id=banner>
-		<div id=logo>
+	<header>
+		<div id=banner-logo>
 			<a href="/">
 				<img loading=lazy height=111 width=111 src="/images/Thaumatorium.svg"
 					alt="main logo consisting of a checkerboard pattern" />
 			</a>
 		</div>
-		<h1 class=title>The Thaumatorium:</h1>
-		<div class=subtitle>Where the magic happens</div>
-		<p><sub>Last updated: <time>2020-05-09</time></sub></p>
-		<p><sup>Previous update: <time>2020-05-02</time></sup></p>
+		<div id=banner-text>
+			<h1 class=title>The Thaumatorium:</h1>
+			<div class=subtitle>Where the magic happens</div>
+			<p><sub>Last updated: <time>2020-05-09</time></sub></p>
+			<p><sup>Previous update: <time>2020-05-02</time></sup></p>
+		</div>
 	</header>
 
 	<nav>
