add more todo items; add slugify project

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 				"#starfield": { path: "/projects/starfield.html", js: true },
 				"#mstg": { path: "/projects/mstg.html", js: true },
 				"#rot13": { path: "/projects/rot13.html", js: true },
+				"#slugify": { path: "/projects/slugify.html", js: true },
 			}
 			let data = hashToPageMap[hash];
 			fetch(data.path).then(response => {
