--- a/pages/projects.html
+++ b/pages/projects.html
@@ -58,4 +58,8 @@
     <h1><a onclick=goto(this.hash) href=#rot13>ROT13</a></h1>
     <p>I <em>could</em> go to <a href=https://ROT13.com>ROT13.com</a>, but why?</p>
   </section>
+
+  <section>
+    <h1><a onclick=goto(this.hash) href=#slugify>Slugify</a></h1>
+  </section>
 </section>
