--- a/pages/todo.html
+++ b/pages/todo.html
@@ -12,8 +12,12 @@
     <li><del>Turn the main tags into articles and stick them all into a &lt;main&gt;, perhaps that gets the layout
       working</del></li>
     <li><del>Center the main content</del></li>
-    <li>Create Mocking Spongebob generator</li>
-    <li>Create ROT13 generator</li>
+    <li><del>Create Mocking Spongebob generator</del></li>
+    <li><del>Create ROT13 generator</del></li>
+    <li>Gotta check out ARIA tags - they weren't really mentioned on WHATWG's Living Document</li>
+    <li>Gotta check out how to create a sitemap, if necessary. Make sure to include the <a href=https://en.wikipedia.org/wiki/Sitemaps#Element_definitions>necessary tags</a></li>
+    <li>https://en.wikipedia.org/wiki/Site_map</li>
+    <li>https://en.wikipedia.org/wiki/Sitemaps</li>
     <li>Make thaumatorium.com look good</li>
     <li>Transfer my articles from my ye olde wordpress site</li>
   </ul>
