add my articles

--- a/index.html
+++ b/index.html
@@ -92,9 +92,19 @@
 				"#todo": { path: "/pages/todo.html", js: false },
 				"#about": { path: "/pages/about.html", js: false },
 				"#articles": { path: "/pages/articles.html", js: false },
+
 				// articles
 				"#example": { path: "/articles/example.html", js: false },
 				"#blog": { path: "/articles/blog.html", js: false },
+				"#find-every-line-that-doesn-t-start-with-a-dot-via-regex": { path: "/articles/find-every-line-that-doesn.html", js: false },
+				"#find-non-ascii-letters-in-vscode": { path: "/articles/find-non-ascii-letters.html", js: false },
+				"#find-the-nth-comma-via-regex": { path: "/articles/find-the-nth-comma-via-regex.html", js: false },
+				"#haskells-fold-functions-explained": { path: "/articles/haskells-fold-functions-explained.html", js: false },
+				"#quick-n-dirty-big-o": { path: "/articles/quick-n-dirty-big-o.html", js: false },
+				"#spark-files-and-taking-notes": { path: "/articles/spark-files-and-taking-notes.html", js: false },
+				"#splitting-js-css-into-2-or-3-files": { path: "/articles/splitting-js-css-into-2-or-3.html", js: false },
+				"#types-of-haskell-functions": { path: "/articles/types-of-haskell-functions.html", js: false },
+
 				// projects
 				"#starfield": { path: "/projects/starfield.html", js: true },
 				"#mstg": { path: "/projects/mstg.html", js: true },
