add base65 project

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -61,5 +61,12 @@
 
   <section>
     <h1><a onclick=goto(this.hash) href=#slugify>Slugify</a></h1>
+    <p>Turns regular text into a URL-friendly &quot;slug&quot;</p>
+    <p>&quot;Some systems define a slug as the part of a URL that identifies a page in human-readable keywords.&quot; - <a href=https://en.wikipedia.org/wiki/Clean_URL#Slug>wikipedia</a></p>
+  </section>
+
+  <section>
+    <h1><a onclick=goto(this.hash) href=#base64>Base64</a></h1>
+    <p>Base64 encoder/decoder</p>
   </section>
 </section>
