--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<meta name=description content="Where the Magic happens" />
 	<!-- Theme color for Android/iOS -->
 	<meta name=theme-color content=#800 />
+	<!-- meta viewport is actually CSS hidden inside your HTML -->
+	<!-- More information https://wiki.whatwg.org/wiki/MetaExtensions#viewport and https://drafts.csswg.org/css-device-adapt/#viewport-meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- manifest.json is currently only supported by Chromium based browsers, as per https://www.caniuse.com/#feat=web-app-manifest -->
 	<link rel=manifest href=/manifest.json />
@@ -110,6 +112,7 @@
 				"#mstg": { path: "/projects/mstg.html", js: true },
 				"#rot13": { path: "/projects/rot13.html", js: true },
 				"#slugify": { path: "/projects/slugify.html", js: true },
+				"#base64": { path: "/projects/base64.html", js: true },
 			}
 			let data = hashToPageMap[hash];
 			fetch(data.path).then(response => {
