put each project into its own folder

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 				"#types-of-haskell-functions": { path: "/articles/types-of-haskell-functions.html", js: false },
 
 				// projects
-				"#starfield": { path: "/projects/starfield.html", js: true },
-				"#mstg": { path: "/projects/mstg.html", js: true },
-				"#rot13": { path: "/projects/rot13.html", js: true },
-				"#slugify": { path: "/projects/slugify.html", js: true },
-				"#base64": { path: "/projects/base64.html", js: true },
+				"#starfield": { path: "/projects/starfield/starfield.html", js: true },
+				"#mstg": { path: "/projects/mstg/mstg.html", js: true },
+				"#rot13": { path: "/projects/rot13/rot13.html", js: true },
+				"#slugify": { path: "/projects/slugify/slugify.html", js: true },
+				"#base64": { path: "/projects/base64/base64.html", js: true },
 			}
 			let data = hashToPageMap[hash];
 			fetch(data.path).then(response => {
