--- a/projects/base64/base64.html
+++ b/projects/base64/base64.html
@@ -1,5 +1,5 @@
 <section>
-  <link rel=stylesheet href=/projects/base64.css>
+  <link rel=stylesheet href=/projects/base64/base64.css>
   <h1>Base64 encode</h1>
   <p>input:</p>
   <textarea id=in_encode></textarea>
@@ -12,5 +12,5 @@
   <p>output - click to copy to clipboard:</p>
   <textarea id=out_decode readonly></textarea>
 
-  <script type=module src=/projects/base64.mjs></script>
+  <script type=module src=/projects/base64/base64.mjs></script>
 </section>
