--- a/projects/mstg/mstg.html
+++ b/projects/mstg/mstg.html
@@ -1,9 +1,9 @@
 <section>
-  <link rel=stylesheet href=/projects/mstg.css>
+  <link rel=stylesheet href=/projects/mstg/mstg.css>
   <h1>Mocking Spongebob Text Generator</h1>
   <p>input:</p>
   <textarea id=in></textarea>
   <p>output - click to copy to clipboard:</p>
   <textarea id=out readonly></textarea>
-  <script type=module src=/projects/mockingspongebob.mjs></script>
+  <script type=module src=/projects/mstg/mstg.mjs></script>
 </section>
