--- a/projects/slugify/slugify.html
+++ b/projects/slugify/slugify.html
@@ -1,9 +1,9 @@
 <section>
-  <link rel=stylesheet href=/projects/slugify.css>
+  <link rel=stylesheet href=/projects/slugify/slugify.css>
   <h1>Slugify</h1>
   <p>input:</p>
   <textarea id=in></textarea>
   <p>output - click to copy to clipboard:</p>
   <textarea id=out readonly></textarea>
-  <script type=module src=/projects/slugify.mjs></script>
+  <script type=module src=/projects/slugify/slugify.mjs></script>
 </section>
