give starfield canvas a shadow instead of a fill

--- a/projects/starfield/starfield.html
+++ b/projects/starfield/starfield.html
@@ -1,9 +1,10 @@
 ﻿<section>
+	<h1>Starfield</h1>
 	<!-- CSS can dynamically load via HTML -->
 	<!-- JS on the other hand has to be dynamically loaded in index.html :/ -->
 	<!-- I get why though - probably to prevent Cross-Site Scripting (XSS) -->
 	<link rel=stylesheet href=/projects/starfield/starfield.css>
-	<canvas id=starfield style=background:#800></canvas>
+	<canvas id=starfield ></canvas>
 	<!-- This script tag exists so the script still works if you go to /projects/starfield.html -->
 	<!-- It's useless for 'injecting' the html -->
 	<script type=module src=/projects/starfield/starfield.mjs></script>
