--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 
 <head>
 	<!--
-  This file is UTF-8 with BOM (Byte Order Mark) - If you're using a decent editor, you can also see this in the status bar (at the bottom of the window) - 
-  This means that the meta tag with charset=utf8 isn't needed.
-  You could also set Content-Type in the packet header (that's something you should set in your server software)
-  You can use http://validator.w3.org/i18n-checker/ to see if your header encoding to UTF-8
-  For more information: https://www.w3.org/International/questions/qa-html-encoding-declarations#nonutf8
-  -->
+This file is UTF-8 with BOM (Byte Order Mark) - If you're using a decent editor, you can also see this in the status bar (at the bottom of the window) - 
+This means that the meta tag with charset=utf8 isn't needed.
+You could also set Content-Type in the packet header (that's something you should set in your server software)
+You can use http://validator.w3.org/i18n-checker/ to see if your header encoding to UTF-8
+For more information: https://www.w3.org/International/questions/qa-html-encoding-declarations#nonutf8
+-->
 	<!-- <meta charset="utf-8" /> -->
 	<!-- The title of the tab -->
 	<title>Thaumatorium</title>
@@ -43,9 +43,9 @@
 		<div id=banner-text>
 			<h1 class=title>The Thaumatorium:</h1>
 			<div class=subtitle>Where the magic happens</div>
-			<p><sub>Last updated: <time>2020-05-11</time></sub></p>
+			<p><sub>Last updated: <time>2020-06-11</time></sub></p>
 			<script>
-				let previousUpdates = ["2020-05-09", "2020-05-02"]
+				let previousUpdates = ["2020-05-11", "2020-05-09", "2020-05-02"]
 			</script>
 		</div>
 	</header>
