--- a/projects/starfield/starfield.html
+++ b/projects/starfield/starfield.html
@@ -43,9 +43,9 @@
 		<div id=banner-text>
 			<h1 class=title>The Thaumatorium:</h1>
 			<div class=subtitle>Where the magic happens</div>
-			<p><sub>Last updated: <time>2020-05-11</time></sub></p>
+			<p><sub>Last updated: <time>2020-06-11</time></sub></p>
 			<script>
-				let previousUpdates = ["2020-05-09", "2020-05-02"]
+				let previousUpdates = ["2020-05-11", "2020-05-09", "2020-05-02"]
 			</script>
 		</div>
 	</header>
@@ -63,40 +63,40 @@
 
 	<main>
 		<section>
-	<h1>Starfield</h1>
-	<!-- CSS can dynamically load via HTML -->
-	<!-- JS on the other hand has to be dynamically loaded in index.html :/ -->
-	<!-- I get why though - probably to prevent Cross-Site Scripting (XSS) -->
-	<link rel=stylesheet href=/projects/starfield/starfield.css>
-	<canvas id=starfield ></canvas>
-	<!-- This script tag exists so the script still works if you go to /projects/starfield.html -->
-	<!-- It's useless for 'injecting' the html -->
-	<script type=module src=/projects/starfield/starfield.mjs></script>
-</section>
-</main>
-<footer>
-	<div class="copyright">
-		&copy;<a href="https://www.youtube.com/watch?v=czgOWmtGVGs" style="text-decoration: none; color: #800;">12019</a>
-		&ndash; <a href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;">
-			<script>
-				document.write(new Date().getFullYear() + 10000);
-			</script>
-		</a>, <abbr
-			title="Copyright is implicit, almost anywhere in the world! If you want to know more, wikipedia 'Berne Convention'"
-			style="text-decoration: none; color: #800;">Thaumatorium</abbr>
+			<h1>Starfield</h1>
+			<!-- CSS can dynamically load via HTML -->
+			<!-- JS on the other hand has to be dynamically loaded in index.html :/ -->
+			<!-- I get why though - probably to prevent Cross-Site Scripting (XSS) -->
+			<link rel=stylesheet href=/projects/starfield/starfield.css>
+			<canvas id=starfield></canvas>
+			<!-- This script tag exists so the script still works if you go to /projects/starfield.html -->
+			<!-- It's useless for 'injecting' the html -->
+			<script type=module src=/projects/starfield/starfield.mjs></script>
+		</section>
+	</main>
+	<footer>
+		<div class="copyright">
+			&copy;<a href="https://www.youtube.com/watch?v=czgOWmtGVGs" style="text-decoration: none; color: #800;">12019</a>
+			&ndash; <a href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;">
+				<script>
+					document.write(new Date().getFullYear() + 10000);
+				</script>
+			</a>, <abbr
+				title="Copyright is implicit, almost anywhere in the world! If you want to know more, wikipedia 'Berne Convention'"
+				style="text-decoration: none; color: #800;">Thaumatorium</abbr>
 
-	</div>
-	<!-- Sssh - don't tell anyone! -->
-	<a class="secret" onclick=specialGoto(event)
-		style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">&#960;</a>
-</footer>
-<script>
-	const specialGoto = (event) => {
-		if (event.ctrlKey && event.shiftKey) {
-			window.location.href = "/pages/praetorianpi.html";
+		</div>
+		<!-- Sssh - don't tell anyone! -->
+		<a class="secret" onclick=specialGoto(event)
+			style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">&#960;</a>
+	</footer>
+	<script>
+		const specialGoto = (event) => {
+			if (event.ctrlKey && event.shiftKey) {
+				window.location.href = "/pages/praetorianpi.html";
+			}
 		}
-	}
-</script>
+	</script>
 </body>
 
 </html>
