--- a/pages/experimentations.html
+++ b/pages/experimentations.html
@@ -62,8 +62,9 @@
   </nav>
 
   <main>
+    <h1>HTML/CSS/JS experimentations go here</h1>
     <section>
-      <h1>HTML/CSS/JS experimentations go here</h1>
+      <h2>HTML elements that are interesting on their own</h2>
       <p style="font-family:'Times New Roman', Times, serif">test</p>
       <p style="font-family: monospace">test</p>
       <time>2019-11-29</time>
@@ -86,8 +87,174 @@
           </kbd>
         </kbd>
       </p>
+    </section>
+    <section>
+      <h2><code>&lt;details&gt;</code> animation test</h2>
+      <style>
+        details>summary {
+          transition: color 1s;
+          color: black;
+        }
 
+        details[open]>summary {
+          transition: color 1s;
+          color: red;
+        }
+
+        details[open] summary~* {
+          /* Change this - it looks weird, IMO */
+          animation: sweep .5s ease-in-out;
+        }
+
+        @keyframes sweep {
+          0% {
+            opacity: 0;
+            margin-left: -10px
+          }
+
+          100% {
+            opacity: 1;
+            margin-left: 0px
+          }
+        }
+      </style>
+      <details>
+        <summary>Automated Status: Operational</summary>
+        <p>Velocity: 12m/s</p>
+        <p>Direction: North</p>
+      </details>
+
+      <section class="progress window">
+        <h1>Copying "Really Achieving Your Childhood Dreams"</h1>
+        <details>
+          <summary>Copying... <progress max="375505392" value="97543282"></progress> 25%</summary>
+          <dl>
+            <dt>Transfer rate:</dt>
+            <dd>452KB/s</dd>
+            <dt>Local filename:</dt>
+            <dd>/home/rpausch/raycd.m4v</dd>
+            <dt>Remote filename:</dt>
+            <dd>/var/www/lectures/raycd.m4v</dd>
+            <dt>Duration:</dt>
+            <dd>01:16:27</dd>
+            <dt>Color profile:</dt>
+            <dd>SD (6-1-6)</dd>
+            <dt>Dimensions:</dt>
+            <dd>320×240</dd>
+          </dl>
+        </details>
+      </section>
+      The following shows how a details element can be used to hide some controls by default:
+
+      <details>
+        <summary><label for=fn>Name & Extension:</label></summary>
+        <p><input type=text id=fn name=fn value="Pillar Magazine.pdf">
+        <p><label><input type=checkbox name=ext checked> Hide extension</label>
+      </details>
+    </section>
+    <section>
+      <h2>CSS border radius</h2>
+      <style>
+        p.standout {
+          width: 13em;
+          height: 8em;
+          border: solid black .1em;
+          border-radius: 7.5em 5em
+        }
+      </style>
       https://www.w3.org/TR/css-backgrounds-3/#the-border-radius
+      <p class=standout>Lorem ipsum dolor sit amet.</p>
+
+      <h3>Corner shaping</h3>
+      <style>
+        p.base {
+          width: 70px;
+          height: 70px;
+          border: solid 30px;
+          border-color: orange orange silver silver;
+        }
+
+        p.corner {
+          border-top-right-radius: 100%;
+        }
+
+        p.a {
+          border-width: 20px;
+          border-radius: 80px / 40px;
+        }
+
+        p.b {
+          border-width: 40px 20px;
+          border-radius: 80px / 60px;
+        }
+
+        p.c {
+          border-width: 40px 80px;
+          border-radius: 80px / 40px;
+        }
+
+        p.d {
+          border-width: 60px 20px;
+          border-radius: 80px / 40px;
+        }
+
+        p.diamond {
+          border: double orange 1em;
+          border-radius: 20px;
+          border-image: url("/pages/border.png") 27 round stretch;
+          box-shadow: 20px 20px 12px 12px rgba(0, 0, 0, 0.4),
+            rgba(0, 0, 0, 0.4) 10px 10px 0 1px inset;
+        }
+
+        p.wiggles {
+          /* doesn't work ಥ_ಥ */
+          border-image-slice: 124;
+          border-image-source: url("/pages/border.png");
+          border: 12px double green;
+          background-color: #c4ebec;
+          background-clip: padding-box;
+          padding: 17px;
+          border-image-outset: 31px;
+          border-image-width: auto;
+        }
+      </style>
+      <p class="base corner">Lorem ipsum dolor sit amet.</p>
+      <p class="base a">Lorem ipsum dolor sit amet.</p>
+      <p class="base b">Lorem ipsum dolor sit amet.</p>
+      <p class="base c">Lorem ipsum dolor sit amet.</p>
+      <p class="base d">Lorem ipsum dolor sit amet.</p>
+      <p class="diamond">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, et.</p>
+      <p class="wiggles">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, et.</p>
+    </section>
+    <section>
+      <h2>Image scaling</h2>
+      <style>
+        img.s {
+          image-rendering: smooth;
+        }
+
+        img.hq {
+          image-rendering: high-quality;
+        }
+
+        img.ce {
+          image-rendering: crisp-edges;
+        }
+
+        img.pi {
+          image-rendering: pixelated;
+        }
+      </style>
+      <p>smooth</p>
+      <img class=s src=pages/wc1.png width=640 />
+      <p>high-quality</p>
+      <img class=hq src=pages/wc2.png width=640 />
+      <p>crisp-edges - this looks broken :(</p>
+      <img class=ce src=pages/wc3.png width=640 />
+      <p>pixelated</p>
+      <img class=pi src=pages/wc4.png width=640 />
+      <p>default</p>
+      <img src=pages/wc5.png width=640 />
     </section>
   </main>
   <footer>
