update footer to not use document.write
Lighthouse kept bugging me about this, so I'm changing it to using an id

--- a/404.html
+++ b/404.html
@@ -73,7 +73,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<footer>
 		<div class=" copyright">
 			&copy;<a href="https://www.youtube.com/watch?v=czgOWmtGVGs" style="text-decoration: none; color: #800;">12019</a>
-			&ndash; <a href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;">
+			&ndash; <a id=target-year href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;">
 				<script>
 					document.write(new Date().getFullYear() + 10000);
 				</script>
