--- a/pages/projects.html
+++ b/pages/projects.html
@@ -143,11 +143,8 @@
   <footer>
     <div class="copyright">
       &copy;<a href="https://www.youtube.com/watch?v=czgOWmtGVGs" style="text-decoration: none; color: #800;">12019</a>
-      &ndash; <a href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;">
-        <script>
-          document.write(new Date().getFullYear() + 10000);
-        </script>
-      </a>, <abbr
+      &ndash; <a id=target-year href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;"></a>,
+      <abbr
         title="Copyright is implicit, almost anywhere in the world! If you want to know more, wikipedia 'Berne Convention'"
         style="text-decoration: none; color: #800;">Thaumatorium</abbr>
 
@@ -157,12 +154,15 @@
       style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">&#960;</a>
   </footer>
   <script>
-    const specialGoto = (event) => {
-      if (event.ctrlKey && event.shiftKey) {
-        window.location.href = "/pages/praetorianpi.html";
-      }
-    }
-  </script>
+		let ty = document.getElementById("target-year");
+		ty.innerHTML = new Date().getFullYear() + 10000;
+
+		const specialGoto = (event) => {
+			if (event.ctrlKey && event.shiftKey) {
+				window.location.href = "/pages/praetorianpi.html";
+			}
+		}
+	</script>
 </body>
 
 </html>
