replace spaces with tabs
spaces are terrible for file size; this also adds settings.json to enforce the change (I hope)

--- a/projects/starfield/starfield.html
+++ b/projects/starfield/starfield.html
@@ -19,6 +19,8 @@
 	<meta name=description content="Where the Magic happens" />
 	<!-- Theme color for Android/iOS -->
 	<meta name=theme-color content=#800 />
+	<!-- icon for Apple's hardware -->
+	<link rel="apple-touch-icon" href="/images/icons-192.png">
 	<!-- meta viewport is actually CSS hidden inside your HTML -->
 	<!-- More information https://wiki.whatwg.org/wiki/MetaExtensions#viewport and https://drafts.csswg.org/css-device-adapt/#viewport-meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
