--- a/pages/experimentations.html
+++ b/pages/experimentations.html
@@ -3,284 +3,286 @@
 <html lang="en-GB">
 
 <head>
-  <!--
-  This file is UTF-8 with BOM (Byte Order Mark) - If you're using a decent editor, you can also see this in the status bar (at the bottom of the window) - 
-  This means that the meta tag with charset=utf8 isn't needed.
-  You could also set Content-Type in the packet header (that's something you should set in your server software)
-  You can use http://validator.w3.org/i18n-checker/ to see if your header encoding to UTF-8
-  For more information: https://www.w3.org/International/questions/qa-html-encoding-declarations#nonutf8
-  -->
-  <!-- <meta charset="utf-8" /> -->
-  <!-- The title of the tab -->
-  <title>Thaumatorium</title>
-  <!-- <base href="https://thaumatorium.com/" /> -->
-  <base href="/" />
-  <!-- This description should show up in Google results -->
-  <meta name=description content="Where the Magic happens" />
-  <!-- Theme color for Android/iOS -->
-  <meta name=theme-color content=#800 />
-  <!-- meta viewport is actually CSS hidden inside your HTML -->
-  <!-- More information https://wiki.whatwg.org/wiki/MetaExtensions#viewport and https://drafts.csswg.org/css-device-adapt/#viewport-meta -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- manifest.json is currently only supported by Chromium based browsers, as per https://www.caniuse.com/#feat=web-app-manifest -->
-  <link rel=manifest href=/manifest.json />
-  <link rel=icon href=/images/favicon.svg />
-  <link async rel=stylesheet href=styles/layout.css />
-  <link async rel=stylesheet href=styles/header.css />
-  <link async rel=stylesheet href=styles/nav.css />
-  <link async rel=stylesheet href=styles/main.css />
-  <link async rel=stylesheet href=styles/footer.css />
+	<!--
+	This file is UTF-8 with BOM (Byte Order Mark) - If you're using a decent editor, you can also see this in the status bar (at the bottom of the window) - 
+	This means that the meta tag with charset=utf8 isn't needed.
+	You could also set Content-Type in the packet header (that's something you should set in your server software)
+	You can use http://validator.w3.org/i18n-checker/ to see if your header encoding to UTF-8
+	For more information: https://www.w3.org/International/questions/qa-html-encoding-declarations#nonutf8
+	-->
+	<!-- <meta charset="utf-8" /> -->
+	<!-- The title of the tab -->
+	<title>Thaumatorium</title>
+	<!-- <base href="https://thaumatorium.com/" /> -->
+	<base href="/" />
+	<!-- This description should show up in Google results -->
+	<meta name=description content="Where the Magic happens" />
+	<!-- Theme color for Android/iOS -->
+	<meta name=theme-color content=#800 />
+	<!-- icon for Apple's hardware -->
+	<link rel="apple-touch-icon" href="/images/icons-192.png">
+	<!-- meta viewport is actually CSS hidden inside your HTML -->
+	<!-- More information https://wiki.whatwg.org/wiki/MetaExtensions#viewport and https://drafts.csswg.org/css-device-adapt/#viewport-meta -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- manifest.json is currently only supported by Chromium based browsers, as per https://www.caniuse.com/#feat=web-app-manifest -->
+	<link rel=manifest href=/manifest.json />
+	<link rel=icon href=/images/favicon.svg />
+	<link async rel=stylesheet href=styles/layout.css />
+	<link async rel=stylesheet href=styles/header.css />
+	<link async rel=stylesheet href=styles/nav.css />
+	<link async rel=stylesheet href=styles/main.css />
+	<link async rel=stylesheet href=styles/footer.css />
 </head>
 
 <body>
-  <header>
-    <div id=banner-logo>
-      <a href="/">
-        <img loading=lazy height=111 width=111 src="/images/Thaumatorium.svg"
-          alt="main logo consisting of a checkerboard pattern" />
-      </a>
-    </div>
-    <div id=banner-text>
-      <h1 class=title>The Thaumatorium:</h1>
-      <div class=subtitle>Where the magic happens</div>
-      <p><sub>Last updated: <time>2020-06-11</time></sub></p>
-      <script>
-        let previousUpdates = ["2020-05-11", "2020-05-09", "2020-05-02"]
-      </script>
-    </div>
-  </header>
+	<header>
+		<div id=banner-logo>
+			<a href="/">
+				<img loading=lazy height=111 width=111 src="/images/Thaumatorium.svg"
+					alt="main logo consisting of a checkerboard pattern" />
+			</a>
+		</div>
+		<div id=banner-text>
+			<h1 class=title>The Thaumatorium:</h1>
+			<div class=subtitle>Where the magic happens</div>
+			<p><sub>Last updated: <time>2020-06-11</time></sub></p>
+			<script>
+				let previousUpdates = ["2020-05-11", "2020-05-09", "2020-05-02"]
+			</script>
+		</div>
+	</header>
 
-  <nav>
-    <!-- `this` refers to the anchor element. `hash` refers to the `#xxxx` of the `href` attribute -->
-    <!-- You can't use `this.href`, because that returns the full URL and we only want the hash -->
-    <a href>Frontpage</a>
-    <a href=pages/articles.html>Articles</a>
-    <a href=pages/projects.html>Projects</a>
-    <a href=pages/experimentations.html>Experimentations</a>
-    <a href=pages/todo.html>TODO</a>
-    <a href=pages/about.html>About</a>
-  </nav>
+	<nav>
+		<!-- `this` refers to the anchor element. `hash` refers to the `#xxxx` of the `href` attribute -->
+		<!-- You can't use `this.href`, because that returns the full URL and we only want the hash -->
+		<a href>Frontpage</a>
+		<a href=pages/articles.html>Articles</a>
+		<a href=pages/projects.html>Projects</a>
+		<a href=pages/experimentations.html>Experimentations</a>
+		<a href=pages/todo.html>TODO</a>
+		<a href=pages/about.html>About</a>
+	</nav>
 
-  <main>
-    <h1>HTML/CSS/JS experimentations go here</h1>
-    <section>
-      <h2>HTML elements that are interesting on their own</h2>
-      <p style="font-family:'Times New Roman', Times, serif">test</p>
-      <p style="font-family: monospace">test</p>
-      <time>2019-11-29</time>
-      <figure>
-        <figcaption>
-          Using Pythagoras' theorem to solve for the hypotenuse
-          <var>a</var> of a triangle with sides <var>b</var> and
-          <var>c</var>
-        </figcaption>
-      </figure>
-      <p>To make George eat an apple, press <kbd><kbd>Shift</kbd>+<kbd>F3</kbd></kbd></p>
-      <p>
-        To make George eat an apple, select
-        <kbd>
-          <kbd>
-            <samp>File</samp>
-          </kbd>|
-          <kbd>
-            <samp>Eat Apple...</samp>
-          </kbd>
-        </kbd>
-      </p>
-    </section>
-    <section>
-      <h2><code>&lt;details&gt;</code> animation test</h2>
-      <style>
-        details>summary {
-          transition: color 1s;
-          color: black;
-        }
+	<main>
+		<h1>HTML/CSS/JS experimentations go here</h1>
+		<section>
+			<h2>HTML elements that are interesting on their own</h2>
+			<p style="font-family:'Times New Roman', Times, serif">test</p>
+			<p style="font-family: monospace">test</p>
+			<time>2019-11-29</time>
+			<figure>
+				<figcaption>
+					Using Pythagoras' theorem to solve for the hypotenuse
+					<var>a</var> of a triangle with sides <var>b</var> and
+					<var>c</var>
+				</figcaption>
+			</figure>
+			<p>To make George eat an apple, press <kbd><kbd>Shift</kbd>+<kbd>F3</kbd></kbd></p>
+			<p>
+				To make George eat an apple, select
+				<kbd>
+					<kbd>
+						<samp>File</samp>
+					</kbd>|
+					<kbd>
+						<samp>Eat Apple...</samp>
+					</kbd>
+				</kbd>
+			</p>
+		</section>
+		<section>
+			<h2><code>&lt;details&gt;</code> animation test</h2>
+			<style>
+				details>summary {
+					transition: color 1s;
+					color: black;
+				}
 
-        details[open]>summary {
-          transition: color 1s;
-          color: red;
-        }
+				details[open]>summary {
+					transition: color 1s;
+					color: red;
+				}
 
-        details[open] summary~* {
-          /* Change this - it looks weird, IMO */
-          animation: sweep .5s ease-in-out;
-        }
+				details[open] summary~* {
+					/* Change this - it looks weird, IMO */
+					animation: sweep .5s ease-in-out;
+				}
 
-        @keyframes sweep {
-          0% {
-            opacity: 0;
-            margin-left: -10px
-          }
+				@keyframes sweep {
+					0% {
+						opacity: 0;
+						margin-left: -10px
+					}
 
-          100% {
-            opacity: 1;
-            margin-left: 0px
-          }
-        }
-      </style>
-      <details>
-        <summary>Automated Status: Operational</summary>
-        <p>Velocity: 12m/s</p>
-        <p>Direction: North</p>
-      </details>
+					100% {
+						opacity: 1;
+						margin-left: 0px
+					}
+				}
+			</style>
+			<details>
+				<summary>Automated Status: Operational</summary>
+				<p>Velocity: 12m/s</p>
+				<p>Direction: North</p>
+			</details>
 
-      <section class="progress window">
-        <h1>Copying "Really Achieving Your Childhood Dreams"</h1>
-        <details>
-          <summary>Copying... <progress max="375505392" value="97543282"></progress> 25%</summary>
-          <dl>
-            <dt>Transfer rate:</dt>
-            <dd>452KB/s</dd>
-            <dt>Local filename:</dt>
-            <dd>/home/rpausch/raycd.m4v</dd>
-            <dt>Remote filename:</dt>
-            <dd>/var/www/lectures/raycd.m4v</dd>
-            <dt>Duration:</dt>
-            <dd>01:16:27</dd>
-            <dt>Color profile:</dt>
-            <dd>SD (6-1-6)</dd>
-            <dt>Dimensions:</dt>
-            <dd>320×240</dd>
-          </dl>
-        </details>
-      </section>
-      The following shows how a details element can be used to hide some controls by default:
+			<section class="progress window">
+				<h1>Copying "Really Achieving Your Childhood Dreams"</h1>
+				<details>
+					<summary>Copying... <progress max="375505392" value="97543282"></progress> 25%</summary>
+					<dl>
+						<dt>Transfer rate:</dt>
+						<dd>452KB/s</dd>
+						<dt>Local filename:</dt>
+						<dd>/home/rpausch/raycd.m4v</dd>
+						<dt>Remote filename:</dt>
+						<dd>/var/www/lectures/raycd.m4v</dd>
+						<dt>Duration:</dt>
+						<dd>01:16:27</dd>
+						<dt>Color profile:</dt>
+						<dd>SD (6-1-6)</dd>
+						<dt>Dimensions:</dt>
+						<dd>320×240</dd>
+					</dl>
+				</details>
+			</section>
+			The following shows how a details element can be used to hide some controls by default:
 
-      <details>
-        <summary><label for=fn>Name & Extension:</label></summary>
-        <p><input type=text id=fn name=fn value="Pillar Magazine.pdf">
-        <p><label><input type=checkbox name=ext checked> Hide extension</label>
-      </details>
-    </section>
-    <section>
-      <h2>CSS border radius</h2>
-      <style>
-        p.standout {
-          width: 13em;
-          height: 8em;
-          border: solid black .1em;
-          border-radius: 7.5em 5em
-        }
-      </style>
-      https://www.w3.org/TR/css-backgrounds-3/#the-border-radius
-      <p class=standout>Lorem ipsum dolor sit amet.</p>
+			<details>
+				<summary><label for=fn>Name & Extension:</label></summary>
+				<p><input type=text id=fn name=fn value="Pillar Magazine.pdf">
+				<p><label><input type=checkbox name=ext checked> Hide extension</label>
+			</details>
+		</section>
+		<section>
+			<h2>CSS border radius</h2>
+			<style>
+				p.standout {
+					width: 13em;
+					height: 8em;
+					border: solid black .1em;
+					border-radius: 7.5em 5em
+				}
+			</style>
+			https://www.w3.org/TR/css-backgrounds-3/#the-border-radius
+			<p class=standout>Lorem ipsum dolor sit amet.</p>
 
-      <h3>Corner shaping</h3>
-      <style>
-        p.base {
-          width: 70px;
-          height: 70px;
-          border: solid 30px;
-          border-color: orange orange silver silver;
-        }
+			<h3>Corner shaping</h3>
+			<style>
+				p.base {
+					width: 70px;
+					height: 70px;
+					border: solid 30px;
+					border-color: orange orange silver silver;
+				}
 
-        p.corner {
-          border-top-right-radius: 100%;
-        }
+				p.corner {
+					border-top-right-radius: 100%;
+				}
 
-        p.a {
-          border-width: 20px;
-          border-radius: 80px / 40px;
-        }
+				p.a {
+					border-width: 20px;
+					border-radius: 80px / 40px;
+				}
 
-        p.b {
-          border-width: 40px 20px;
-          border-radius: 80px / 60px;
-        }
+				p.b {
+					border-width: 40px 20px;
+					border-radius: 80px / 60px;
+				}
 
-        p.c {
-          border-width: 40px 80px;
-          border-radius: 80px / 40px;
-        }
+				p.c {
+					border-width: 40px 80px;
+					border-radius: 80px / 40px;
+				}
 
-        p.d {
-          border-width: 60px 20px;
-          border-radius: 80px / 40px;
-        }
+				p.d {
+					border-width: 60px 20px;
+					border-radius: 80px / 40px;
+				}
 
-        p.diamond {
-          border: double orange 1em;
-          border-radius: 20px;
-          border-image: url("/pages/border.png") 27 round stretch;
-          box-shadow: 20px 20px 12px 12px rgba(0, 0, 0, 0.4),
-            rgba(0, 0, 0, 0.4) 10px 10px 0 1px inset;
-        }
+				p.diamond {
+					border: double orange 1em;
+					border-radius: 20px;
+					border-image: url("/pages/border.png") 27 round stretch;
+					box-shadow: 20px 20px 12px 12px rgba(0, 0, 0, 0.4),
+						rgba(0, 0, 0, 0.4) 10px 10px 0 1px inset;
+				}
 
-        p.wiggles {
-          /* doesn't work ಥ_ಥ */
-          border-image-slice: 124;
-          border-image-source: url("/pages/border.png");
-          border: 12px double green;
-          background-color: #c4ebec;
-          background-clip: padding-box;
-          padding: 17px;
-          border-image-outset: 31px;
-          border-image-width: auto;
-        }
-      </style>
-      <p class="base corner">Lorem ipsum dolor sit amet.</p>
-      <p class="base a">Lorem ipsum dolor sit amet.</p>
-      <p class="base b">Lorem ipsum dolor sit amet.</p>
-      <p class="base c">Lorem ipsum dolor sit amet.</p>
-      <p class="base d">Lorem ipsum dolor sit amet.</p>
-      <p class="diamond">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, et.</p>
-      <p class="wiggles">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, et.</p>
-    </section>
-    <section>
-      <h2>Image scaling</h2>
-      <style>
-        img.s {
-          image-rendering: smooth;
-        }
+				p.wiggles {
+					/* doesn't work ಥ_ಥ */
+					border-image-slice: 124;
+					border-image-source: url("/pages/border.png");
+					border: 12px double green;
+					background-color: #c4ebec;
+					background-clip: padding-box;
+					padding: 17px;
+					border-image-outset: 31px;
+					border-image-width: auto;
+				}
+			</style>
+			<p class="base corner">Lorem ipsum dolor sit amet.</p>
+			<p class="base a">Lorem ipsum dolor sit amet.</p>
+			<p class="base b">Lorem ipsum dolor sit amet.</p>
+			<p class="base c">Lorem ipsum dolor sit amet.</p>
+			<p class="base d">Lorem ipsum dolor sit amet.</p>
+			<p class="diamond">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, et.</p>
+			<p class="wiggles">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, et.</p>
+		</section>
+		<section>
+			<h2>Image scaling</h2>
+			<style>
+				img.s {
+					image-rendering: smooth;
+				}
 
-        img.hq {
-          /* a future addition? */
-          image-rendering: high-quality;
-        }
+				img.hq {
+					/* a future addition? */
+					image-rendering: high-quality;
+				}
 
-        img.ce {
-          image-rendering: crisp-edges;
-        }
+				img.ce {
+					image-rendering: crisp-edges;
+				}
 
-        img.pi {
-          image-rendering: pixelated;
-        }
-      </style>
-      <p>smooth</p>
-      <img class=s src=pages/wc1.png width=640 />
-      <p>high-quality</p>
-      <img class=hq src=pages/wc2.png width=640 />
-      <p>crisp-edges - this looks broken :(</p>
-      <img class=ce src=pages/wc3.png width=640 />
-      <p>pixelated</p>
-      <img class=pi src=pages/wc4.png width=640 />
-      <p>default</p>
-      <img src=pages/wc5.png width=640 />
-    </section>
-  </main>
-  <footer>
-    <div class="copyright">
-      &copy;<a href="https://www.youtube.com/watch?v=czgOWmtGVGs" style="text-decoration: none; color: #800;">12019</a>
-      &ndash; <a id=target-year href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;"></a>,
-      <abbr
-        title="Copyright is implicit, almost anywhere in the world! If you want to know more, wikipedia 'Berne Convention'"
-        style="text-decoration: none; color: #800;">Thaumatorium</abbr>
+				img.pi {
+					image-rendering: pixelated;
+				}
+			</style>
+			<p>smooth</p>
+			<img class=s src=pages/wc1.png width=640 />
+			<p>high-quality</p>
+			<img class=hq src=pages/wc2.png width=640 />
+			<p>crisp-edges - this looks broken :(</p>
+			<img class=ce src=pages/wc3.png width=640 />
+			<p>pixelated</p>
+			<img class=pi src=pages/wc4.png width=640 />
+			<p>default</p>
+			<img src=pages/wc5.png width=640 />
+		</section>
+	</main>
+	<footer>
+		<div class="copyright">
+			&copy;<a href="https://www.youtube.com/watch?v=czgOWmtGVGs" style="text-decoration: none; color: #800;">12019</a>
+			&ndash; <a id=target-year href="http://updateyourfooter.com/" style="text-decoration: none; color: #800;"></a>,
+			<abbr
+				title="Copyright is implicit, almost anywhere in the world! If you want to know more, wikipedia 'Berne Convention'"
+				style="text-decoration: none; color: #800;">Thaumatorium</abbr>
 
-    </div>
-    <!-- Sssh - don't tell anyone! -->
-    <a class="secret" onclick=specialGoto(event)
-      style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">&#960;</a>
-  </footer>
-  <script>
-    let ty = document.getElementById("target-year");
-    ty.innerHTML = new Date().getFullYear() + 10000;
+		</div>
+		<!-- Sssh - don't tell anyone! -->
+		<a class="secret" onclick=specialGoto(event)
+			style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">&#960;</a>
+	</footer>
+	<script>
+		let ty = document.getElementById("target-year");
+		ty.innerHTML = new Date().getFullYear() + 10000;
 
-    const specialGoto = (event) => {
-      if (event.ctrlKey && event.shiftKey) {
-        window.location.href = "/pages/praetorianpi.html";
-      }
-    }
-  </script>
+		const specialGoto = (event) => {
+			if (event.ctrlKey && event.shiftKey) {
+				window.location.href = "/pages/praetorianpi.html";
+			}
+		}
+	</script>
 </body>
 
 </html>
