Offline capability! Site is now a PWA!
Via Progressive Web App tech the site is now available when offline, by caching all that you need when you first load the site.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 		<a class="secret" onclick=specialGoto(event)
 			style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">&#960;</a>
 	</footer>
+	<script async src=pwa.js></script>
 	<script>
 		let ty = document.getElementById("target-year");
 		ty.innerHTML = new Date().getFullYear() + 10000;
