--- a/projects/slugify/slugify.html
+++ b/projects/slugify/slugify.html
@@ -87,6 +87,7 @@
 		<a class="secret" onclick=specialGoto(event)
 			style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">&#960;</a>
 	</footer>
+	<script async src=pwa.js></script>
 	<script>
 		let ty = document.getElementById("target-year");
 		ty.innerHTML = new Date().getFullYear() + 10000;
