--- a/projects/starfield/starfield.html
+++ b/projects/starfield/starfield.html
@@ -92,6 +92,7 @@
 		<a class="secret" onclick=specialGoto(event)
 			style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">&#960;</a>
 	</footer>
+	<script async src=pwa.js></script>
 	<script>
 		const specialGoto = (event) => {
 			if (event.ctrlKey && event.shiftKey) {
