updated frontpage; improved articles

--- a/index.html
+++ b/index.html
@@ -64,32 +64,32 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	</nav>
 
 	<main>
-		<section>
+		<article>
 			<h1>Welcome to the Thaumatorium!</h1>
 			<p>
-				<strong>Note:</strong> This website is pure uncompressed HTML/CSS/JS, with some PNG and WEBP images to fluff
-				shit
-				up. I like to think that this is how the web is <em>supposed</em> to be.</p>
+				This is my personal website, where I write my personal thoughts and post my little projects.
 			<p>
-				An example on <em>how not to do HTML</em>, take a look at Twitter with their
+				Note that this site is pure uncompressed HTML/CSS/JS, with some PNG and WEBP images to fluff
+				shit up. I like to think that <strong>this is how the web is supposed to be</strong>, other than that these are
+				static pages instead of built up by some (C#/JS/PHP/Java) framework.
+			<p>
+				If you want an example on <em>how not to do HTML</em>, take a look at Twitter with their
 				<code>&lt;div&gt;&lt;div&gt;&lt;div&gt;divs&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;</code>
-				nonsense. Silly Twitter! That's not how HTML should look!
-			</p>
+				nonsense. Silly Twitter! That's not how you should use HTML!
 			<p>
-				<strong>Disclaimer:</strong> I'm not perfect, so this file <em>will likely</em> contain mistakes. If you find
-				any, please open a <a href="https://github.com/Thaumatorium/thaumatorium.github.io/issues">Github Issue</a>,
-				whether it's just a spelling mistake or something wrong with the HTML.
-			</p>
+				This site's author is based in the Netherlands. I like to take an unnormal take on things: Look at what the
+				masses
+				are doing, learn from them by NOT doing that and then find out where the good shit is at.
 			<p>
-				This site's author based in the Netherlands. I like to take an unnormal take on things: Look at what the masses
-				are
-				doing, learning from them by NOT doing that and finding out where the good shit is at!
-			</p>
-			<p>
-				That doesn't necessarily mean that popular = bad. I mean C# is relatively popular yet is damn good! I (still)
-				just hate JavaScript and its ecology. Feckin' JavaScript.
-			</p>
-		</section>
+				That doesn't necessarily mean that popular = bad. It means that most programmers don't *really* care about
+				quality or speed - if not them, the company they work for.
+			<footer>
+				<p>
+					<strong>Disclaimer:</strong> I'm not perfect, so this file <em>will likely</em> contain small mistakes. If you
+					find any, please open a <a href="https://github.com/Thaumatorium/thaumatorium.github.io/issues">Github
+						Issue</a>, whether it's just a spelling mistake or something wrong with the HTML.
+			</footer>
+		</article>
 	</main>
 	<footer>
 		<div class="copyright">
